# orgST

./: .classpath  .gitattributes  .gitignore  .gitmodules  .project  0001-fixed-cv.patch  App.xsd  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalcTrashR1.py  LICENSE  PORTING-MD-LICENSE  PORTING.md  README.md  Running.md  SECURITY.md  TODO.MD  app.py  apploader.py  boot.py  channelviewer.py  colorama.txt  documentation.txt  eee.txt  functions.py  macosLP.py  main-cases.py  main-lin.py  main.py  maindata  maindata.json  orgST alpha.py  orgST_alpha.py  org_terminal-lin.py  org_terminal.py  pom.xml  preterm.py  py.tar.zst  pyMacPatcher  randdata.json  (+3 more)
.github/: pull_request_template.md
ArchivePythonRLS/: betterterm.py  org_terminal.py
Installing/: install.ps1  install.sh
JSONs/: channeldata.json  consoletext.json  errordial.json  maindata.json  orgid.json  randdata.json
Launcher/: pom.xml
PYextras/: TheFlag.py  calctrash.py  channelviewer.py  cvalt.py  help.py  main-cases.py  sponsorviewer.py  whatasecret.py
Python/: app.py  apploader.py  colorama.txt  functions.py  interface.html  main-ext.py  main.py  org_terminal-lin.py  org_terminal.py  tree.txt
apps/: apps.json
docs/: Sponsors.md  index.html  ports  ports.md
orgST++/: CMakeLists.txt  README.md  RequiredLibs.txt
orgST++/src/: Main.cpp  Methods.cpp
orgST++/src/ChannelApps/: CalcTrash.cpp  CalcTrash.hpp
orgST++/src/Extras/: Flag.cpp  Flag.hpp
orgST++/src/OrgID/: Client.cpp  Encrypt.cpp  KeyLoader.cpp  OrgID.hpp
orgST++/src/Variables/: AppData.cpp  AppData.hpp  ChannelData.cpp  ChannelData.h
(+185 files in other folders)
